# rust-shared

./: .gitignore  Cargo.toml
.github/workflows/: test.yaml
macros/: Cargo.toml
macros/src/: lib.rs
src/: course_data.rs  course_evaluation_data.rs  data.rs  helpers.rs  lib.rs  raw_data.rs  sync.rs  traits.rs
src/monitoring/: mod.rs  monitoring.rs
src/status/: engine.rs
src/sync/: bundle_data.rs  constants.rs  course_data.rs  course_evaluation_data.rs  explanation_data.rs  helpers.rs  icon_data.rs  mod.rs  question_data.rs  question_option_data.rs  question_source_data.rs  question_topic_data.rs  traits.rs  types.rs
