[workspace]
members = [".", "macros"]

[package]
name = "medici-shared"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
anyhow = "1.0.98"
async-openai = "0.29.0"
aws-sdk-sesv2 = "1.85.0"
blake3 = "1.8.2"
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "serde",
    "clock",
] }
medici-macros = { path = "macros" }
regex = "1.11.1"
rust_decimal = "1.37.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "derive",
] }
strum = { version = "0.27.1", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["std", "v4", "serde"] }

[dev-dependencies]
fake = { version = "4.3.0", features = [
    "derive",
    "rust_decimal",
    "uuid",
    "chrono",
] }
proptest = "1.7.0"
rand = "0.9.1"
