[workspace]
members = [".", "macros"]

[package]
name = "medici-shared"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"

[dependencies]
anyhow = "1.0.100"
async-openai = { version = "0.32.2", features = ["chat-completion"] }
aws-sdk-sesv2 = "1.110.0"
blake3 = "1.8.2"
chrono = { version = "0.4.42", default-features = false, features = [
    "std",
    "serde",
    "clock",
] }
medici-macros = { path = "macros" }
regex = "1.12.2"
rust_decimal = "1.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "derive",
] }
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.19.0", features = ["std", "v4", "serde"] }

[dev-dependencies]
fake = { version = "4.4.0", features = [
    "derive",
    "rust_decimal",
    "uuid",
    "chrono",
] }
proptest = "1.9.0"
rand = "0.9.2"
