[workspace]
members = [".", "macros"]

[package]
name = "medici-shared"
version = "0.1.0"
edition = "2024"
rust-version = "1.97"

[dependencies]
anyhow = "1.0.103"
aws-sdk-sesv2 = "1.124.0"
blake3 = "1.8.5"
chrono = { version = "0.4.45", default-features = false, features = [
    "std",
    "serde",
    "clock",
] }
clap = { version = "4.6.2", optional = true, features = ["derive"] }
medici-macros = { path = "macros" }
regex = "1.13.0"
rust_decimal = "1.42.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", default-features = false, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "derive",
] }
strum = { version = "0.28.0", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
uuid = { version = "1.23.4", features = ["std", "v4", "serde"] }

[dev-dependencies]
fake = { version = "5.1.0", features = [
    "derive",
    "rust_decimal",
    "uuid",
    "chrono",
] }
proptest = "1.11.0"
rand = "0.10.2"

[features]
clap = ["dep:clap"]
