[package]
name = "medici-macros"
version = "0.0.1"
authors = ["Diego Stratta <diego@medici.uy>"]
edition = "2024"
rust-version = "1.92"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
quote = { version = "1.0.43" }
proc-macro2 = "1.0.105"
syn = { version = "2.0.113", features = ["full"] }
