[package]
name = "medici-macros"
version = "0.0.1"
authors = ["Diego Stratta <diego@medici.uy>"]
edition = "2024"
rust-version = "1.97"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
quote = { version = "1.0.46" }
proc-macro2 = "1.0.106"
syn = { version = "2.0.118", features = ["full"] }
